add link from office to keg

--- a/BeerTap/BeerTap.ApiServices/BeerTap.ApiServices.csproj
+++ b/BeerTap/BeerTap.ApiServices/BeerTap.ApiServices.csproj
@@ -185,6 +185,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RequestContextExtractor.cs" />
     <Compile Include="GetBeerApiService.cs" />
     <Compile Include="IDomainServiceResolver.cs" />
     <Compile Include="IGetBeerApiService.cs" />
