--- a/BeerTap/BeerTap.WebApi/BeerTap.WebApi.csproj
+++ b/BeerTap/BeerTap.WebApi/BeerTap.WebApi.csproj
@@ -15,7 +15,7 @@
     <AssemblyName>BeerTap.WebApi</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -297,6 +297,7 @@
     <Compile Include="Hypermedia\SampleSpec.cs" />
     <Compile Include="Infrastructure\BootStrapper.cs" />
     <Compile Include="Infrastructure\DefaultApiContainer.cs" />
+    <Compile Include="Infrastructure\Installers\ApiDependenciesInstaller.cs" />
     <Compile Include="Infrastructure\Installers\ResourceMapperInstaller.cs" />
     <Compile Include="Infrastructure\Installers\DomainServicesInstaller.cs" />
     <Compile Include="Infrastructure\CustomPingResourceFactory.cs" />
@@ -363,16 +364,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
-          <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>51039</DevelopmentServerPort>
-          <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/BeerTap.WebApi</IISUrl>
-          <NTLMAuthentication>False</NTLMAuthentication>
-          <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl>
-          </CustomServerUrl>
-          <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
+          <SaveServerSettingsInUserFile>True</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
     </VisualStudio>
